--- a/portfolio-page/index.html
+++ b/portfolio-page/index.html
@@ -28,7 +28,7 @@
 <link rel="stylesheet" type="text/css" href="css/style2">
 <meta charset="UTF-8">
 
-<title>Portfolio Page</title>
+<title>TROLLMOTION</title>
   
 </head>
 
@@ -41,15 +41,15 @@
 
 <!-- bootstrap navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a href="index.html" target="_blank" class="navbar-brand"><i class="far fa-grin-squint-tears"></i>TROLLMOTION</a>
+  <a href="index.html#" target="_blank" class="navbar-brand"><i class="far fa-grin-squint-tears"></i>TROLLMOTION</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="page1/index.html" target="_blank">TURBOTASTIC<i class="fas fa-car-crash"></i></a>
-      <a class="nav-item nav-link" href="https://www.facebook.com/groups/151591848833791/?ref=bookmarks" target="_blank">ME & THE HOMIES<i class="fas fa-users"></i></a>
-		 <a class="nav-item nav-link" href="https://www.linkedin.com/in/andrew-wyllie/" target="_blank"></i>BANDO HUNTER<i class="fas fa-map-marked-alt"></i></a>
+      <a class="nav-item nav-link" href="page2/index.html" target="_blank">ME & THE HOMIES<i class="fas fa-users"></i></a>
+		 <a class="nav-item nav-link" href="page3/index.html#" target="_blank"></i>BANDO HUNTER<i class="fas fa-map-marked-alt"></i></a>
     </div>
   </div>
 </nav>
