--- a/portfolio-page/page1/index.html
+++ b/portfolio-page/page1/index.html
@@ -77,7 +77,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="page1/index.html" target="_blank">TURBOTASTIC<i class="fas fa-car-crash"></i></a>
+      <a class="nav-item nav-link" href="../../portfolio-page/page1/index.html" target="_blank">TURBOTASTIC<i class="fas fa-car-crash"></i></a>
       <a class="nav-item nav-link" href="../../portfolio-page/page2/index.html" target="_blank">ME & THE HOMIES<i class="fas fa-users"></i></a>
      <a class="nav-item nav-link" href="../../portfolio-page/page3/index.html#" target="_blank"></i>BANDO HUNTER<i class="fas fa-map-marked-alt"></i></a>
     </div>
@@ -195,7 +195,7 @@
                                   <header class="flex items-center justify-between leading-tight p-2 md:p-4">
                                       <h1 class="text-lg">
                                           <a class="no-underline  hover:underline text-black" href="../../portfolio-page/page3/index.html#">
-                                              Social Media
+                                              BANDO HUNTERS
                                           </a>
                                       </h1>
                                       
